%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Player
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: wait
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: run
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: grounded
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: vSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: dead
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: health
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: waitTime
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: death
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: movingToX
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: 1d5aac14d7582d74ca92ed60115121a7, type: 2}
    m_Threshold: -6
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: f7381f49e10d171488711a9bc9184829, type: 2}
    m_Threshold: -2
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: d7e09425196c4b84ebe127750410af37, type: 2}
    m_Threshold: 4
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 1ad5f53f8ddaa9149b553a221b2785bb, type: 2}
    m_Threshold: 6
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: a1c079643b46f184fb4667941bc4b4d9, type: 2}
    m_Threshold: 8
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: ea259d7f7833b2645bc7bb46b8e1c5ea, type: 2}
    m_Threshold: 15
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: vSpeed
  m_BlendParameterY: speed
  m_MinThreshold: -6
  m_MaxThreshold: 15
  m_UseAutomaticThresholds: 0
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110260974}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: run
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110133017
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110260974}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: run
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110133219
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110293942}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: death
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110145653
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251440}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .0799999982
  - m_ConditionMode: 1
    m_ConditionEvent: grounded
    m_EventTreshold: 0
    m_ExitTime: .150000006
  m_Atomic: 0
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166685
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110251075}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: grounded
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 2
    m_ConditionEvent: dead
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166893
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251075}
  m_DstState: {fileID: 110251440}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: grounded
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110182342
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110293942}
  m_DstState: {fileID: 110285877}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: movingToX
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robin_Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 34ab93cdae19bf34da50086791153441, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110251075
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Player_Jump_Tree
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 348, y: 48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110251440
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Player_Jump_7
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 1be2d5a7170488b4984b53baba8071a9, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 348, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110260974
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robin_Walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 3e2dfb197d5374444b31d6ddc0564630, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 192, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110285877
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Player_Dead
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 042de207bb893a54ea84d525ba82eb3b, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: -192, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110293942
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Player_Death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 2aced2cac2205d541a21664b84ca0209, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: -96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110260974}
  - {fileID: 110251075}
  - {fileID: 110293942}
  - {fileID: 110285877}
  - {fileID: 110251440}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110166685}
      - {fileID: 110133219}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
    data:
      first: {fileID: 110260974}
      second:
      - {fileID: 110133017}
    data:
      first: {fileID: 110251075}
      second:
      - {fileID: 110166893}
    data:
      first: {fileID: 110293942}
      second:
      - {fileID: 110182342}
    data:
      first: {fileID: 110285877}
      second: []
    data:
      first: {fileID: 110251440}
      second:
      - {fileID: 110145653}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
